force-app/main/default/objects/Expense__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>This is the rate or value of the expense.</description>
    <inlineHelpText>This is the rate or value of the expense.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>