force-app/main/default/objects/Expense__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>This is an optional column that can be used for hard cost entries. Add any relevant reference information such as an invoice or other reference number associated with the vendor.</description>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>