force-app/main/default/objects/Expense__c/fields/UTBMS_Expense_Code__c.field-meta.xml
<CustomField>
    <fullName>UTBMS_Expense_Code__c</fullName>
    <description>Include this column if your firm uses UTBMS codes. Add the expense code for the expense. If your firm does not use UTBMS codes you can delete this column from the template.</description>
    <label>UTBMS Expense Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>