force-app/main/default/objects/Expense__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <description>This is an optional column that can be used for hard costs entries. Add the name of the vendor associated with the hard cost. If the vendor name is not found as a contact in Clio, a new company contact matching the vendor name will be created as part of the import process.</description>
    <label>Vendor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>